ota/ota-manager/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ota-manager-team-<id>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ota-manager-team-<id>
  template:
    metadata:
      labels:
        app: ota-manager-team-<id>
    spec:
      containers:
        - name: app
          image: registry.ota-lab.local/ota-manager:team-<id>-1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
