ota/ota-manager/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ota-manager-team-<id>
spec:
  selector:
    app: ota-manager-team-<id>
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
